--- a/lang/en.json
+++ b/lang/en.json
@@ -622,192 +622,192 @@
     "matrixaction": {
       "backdoor_entry": {
         "name": "Backdoor Entry",
-        "hint": "Gain Admin access to a host or device the sneaky way. First, do a successful Probe action and add the net hits as a bonus to this dice pool.",
+        "hint": "Gain Admin access to a host or device the sneaky way. First, do a successful Probe action and add the net hits as a bonus to this dice pool."
       },
       "brute_force": {
         "name": "Brute Force",
-        "hint": "Attempt to get quick access by spaming a target. When trying to switch from outsider to admin directly the enemy gets two bonus dice and plus four Defense Rating - In any way the device will be alarmed.",
+        "hint": "Attempt to get quick access by spamming a target. When trying to switch from outsider to admin directly, the enemy gets two bonus dice and plus four Defense Rating - In any way the device will be alarmed."
       },
       "calibration": {
         "name": "Calibration",
-        "hint": "Add one to the Matrix Initiative of you and your team mates (sharing an AR-feed with your PAN) for every two hits you get. The total increase of a Persona can't be higher than your Data Processing.",
+        "hint": "Add one to the Matrix Initiative of you and your team mates (sharing an AR-feed with your PAN) for every two hits you get. The total increase of a Persona can't be higher than your Data Processing."
       },
       "change_icon": {
         "name": "Change Icon",
-        "hint": "Select an Icon and replace it with another one. This however won't help you not get tracked down, if someone is willing to.",
+        "hint": "Select an Icon and replace it with another one. This won't prevent you to be tracked down, if someone attempts to."
       },
       "check_os": {
         "name": "Check OS",
-        "hint": "Have a look at your Overwatch Score. Ironically this action increases your OS.",
+        "hint": "Have a look at your Overwatch Score. Ironically this action also increases your OS."
       },
       "control_device": {
         "name": "Control Device",
-        "hint": "Take control of a device as if you are the owner, until you leave the device willingly, shut it down or someone else pushes you out of control.",
+        "hint": "Take control of a device as if you are the owner, until you leave the device willingly, shut it down or someone else pushes you out of control."
       },
       "crack_file": {
         "name": "Crack File",
-        "hint": "Make an encrypted file readable with this action.",
+        "hint": "Make an encrypted file readable with this action."
       },
       "crash_program": {
         "name": "Crash Program",
-        "hint": "Check out what programs your opponent's device is running with a Matrix Perception, then take this action to shut it down.",
+        "hint": "Check out what programs your opponent's device is running with a Matrix Perception, then take this action to shut it down."
       },
       "data_spike": {
         "name": "Dataspike",
-        "hint": "This is the standard attack for dealing Matrix damage to a device or persona.",
+        "hint": "This is the standard attack for dealing Matrix damage to a device or persona."
       },
       "disarm_data_bomb": {
         "name": "Disarm Data Bomb",
-        "hint": "With this, you can disarm Data Bombs that you detected with Matrix Perception. If you fail to achieve net hits, the Data Bomb blows up.",
+        "hint": "With this, you can disarm Data Bombs that you detected with Matrix Perception. If you fail to achieve net hits, the Data Bomb blows up."
       },
       "device_lock": {
         "name": "Device Lock",
-        "hint": "Prevent the owner of a device to cut off the connection of a device to the Matrix for the duration of net hit combat rounds. Can be prolonged one time by spending a minor action.",
+        "hint": "Prevent the owner of a device to cut off the connection of a device to the Matrix for the duration of net hit combat rounds. Can be prolonged one time by spending a minor action."
       },
       "denial_of_service": {
         "name": "Denial of Service",
-        "hint": "Create a dice penalty for all tests using this wifi device by net hits times two.",
+        "hint": "Create a dice penalty for all tests using this wifi device by net hits times two."
       },
       "delayed_command": {
         "name": "Delayed Command",
-        "hint": "Send a command to a device with a time frame. On success, the device will acknowledge it as being sent from it's owner. After the time frame expired, the command will,be executed, even when the device was cut off from the Matrix. A reboot before execution however will delete the command.",
+        "hint": "Send a command to a device with a time frame. On success, the device will acknowledge it as being sent from it's owner. After the time frame expired, the command will be executed, even when the device was cut off from the Matrix. A reboot before execution however, will delete the command."
       },
       "edit_file": {
         "name": "Edit File",
-        "hint": "Add, edit, copy or delete a file with this action. During a combat however, adding or changing a file needs one action per detail. Encrypted files can't be copied.",
+        "hint": "Add, edit, copy or delete a file with this action. During a combat, adding or changing a file needs an action for each detail. Encrypted files can't be copied."
       },
       "encrypt_file": {
         "name": "Encrypt File",
-        "hint": "This makes a file unreadable without decrypting it first. The Encryption Rating is equal to the hits of this roll.",
+        "hint": "This makes a file unreadable without decrypting it first. The Encryption Rating is equal to the hits of this roll."
       },
       "enter_host": {
         "name": "Enter/Exit Host",
-        "hint": "Get into or leave a host.",
+        "hint": "Get into or leave a host."
       },
       "erase_matrix_signature": {
         "name": "Erase Matrix Sign",
-        "hint": "If you have a Resonance rating, remove a Matrix signature left by a technomancer or sprite with this action.",
+        "hint": "If you have a Resonance rating, remove a Matrix signature left by a technomancer or sprite with this action."
       },
       "format_device": {
         "name": "Format Device",
-        "hint": "You replace the boot sector of this device with your own code, so it won't start anymore whenever it is told to reboot.",
+        "hint": "You replace the boot sector of this device with your own code, so it won't start anymore whenever it is told to reboot."
       },
       "full_matrix_defense": {
         "name": "Full Matrix Defense",
-        "hint": "Add your Firewall to all defense tests that are related to the Matrix.",
+        "hint": "Add your Firewall to all defense tests that are related to the Matrix."
       },
       "garbage_in_out": {
         "name": "Garbage In/Garbage Out",
-        "hint": "Mess around with the input and output signals of a device. For example, every time the owner wants to start a program, the last taken picture is deleted instead.",
+        "hint": "Mess around with the input and output signals of a device. For example, every time the owner wants to start a program, the last taken picture is deleted instead."
       },
       "hash_check": {
         "name": "Hash Check",
-        "hint": "Search for encrypted files with a specific content in a host or device. Chances increase significantly by having a hash value.",
+        "hint": "Search for encrypted files with a specific content in a host or device. Chances increase significantly by having a hash value."
       },
       "hide": {
         "name": "Hide",
-        "hint": "Try to make a target lose sight to you in the Matrix. Does not work if the icon has User or Admin access to any device of your network.",
+        "hint": "Try to make a target lose sight to you in the Matrix. Does not work if the icon has User or Admin access to any device of your network."
       },
       "jack_out": {
         "name": "Jack Out",
-        "hint": "Disconnect from the Matrix by rebooting your device. If you are link-locked, the opponent will roll against you. If you did not switch to AR first, you'll get damage by dump-shock.",
+        "hint": "Disconnect from the Matrix by rebooting your device. If you are link-locked, the opponent will roll against you. If you did not switch to AR first, you'll get damage by dump-shock."
       },
       "jam_signals": {
         "name": "Jam Signals",
-        "hint": "While you are not using this device for other actions, this will increase the noise rating by any hits you have within a range of 100 meters.",
+        "hint": "While you are not using this device for other actions, this will increase the noise rating by any hits you have within a range of 100 meters."
       },
       "jump_rigged": {
         "name": "Jump Into Rigged Device",
-        "hint": "The vehicle or drone you want to jump into needs a rigger adaption, nobody is jumped into it right now and you need a control rig. Your ownership and access level also factor in if this will work or not and if you need to roll.",
+        "hint": "The vehicle or drone you want to jump into needs a rigger adaption and you need a control rig. You can only jump in, if no one else is. Your ownership and access level also factor in if this will work or not and if you need to roll."
       },
       "known_exploit": {
         "name": "Known Exploit Backdoor Entry",
-        "hint": "Try to use known exploits to get direct Admin access. Your chance of succeeding is decreased on well patched hosts or devices. This combines the Probe and Backdoor Entry actions to one, however you can't get or use Edge for this while the opponent gets one temporary Edge for free to thwart your intentions.",
+        "hint": "Try to use known exploits to get direct Admin access. Your chance of succeeding is decreased on well patched hosts or devices. This combines the Probe and Backdoor Entry actions into one. You can't get or use Edge for this action while the opponent gets one temporary Edge for free to oppose you."
       },
       "masquerade": {
         "name": "Masquerade",
-        "hint": "You can pretend being someone else in the Matrix for net hit minutes. However it's hard to trick the Matrix and this won't work for things like taking ownership of devices or banking.",
+        "hint": "You can pretend being someone else in the Matrix for net hit minutes. However it's hard to trick the Matrix and this won't work for things like taking ownership of devices or banking."
       },
       "matrix_perception": {
         "name": "Matrix Perception",
-        "hint": "Find an icon that runs silent or collect information about a target, it's icon and device rating, running devices, programs and other specific information.",
+        "hint": "Find an icon that runs silent or collect information about a target, like it's icon and device rating, running devices, programs and other specific information."
       },
       "matrix_search": {
         "name": "Matrix Search",
-        "hint": "Scan the public Matrix for information about a subject.",
+        "hint": "Scan the public Matrix for information about a subject."
       },
       "metahuman_middle": {
         "name": "Metahuman in the Middle",
-        "hint": "Make all Matrix communications and actions run through your device for net hit minutes.",
+        "hint": "Make all Matrix communications and actions run through your device for net hit minutes."
       },
       "modify_icon": {
         "name": "Modify Icon",
-        "hint": "Modify an Icon that you have Admin access for to something, that it does not represent, like making your gun look like flowers.",
+        "hint": "Modify an Icon that you have Admin access for to something, that it does not represent, like making your gun look like flowers."
       },
       "probe": {
         "name": "Probe",
-        "hint": "Try to find an exploit and use the Backdoor Entry action afterwards to get access. This takes some time, but in contrast to Brute Force, this won't alarm the target.",
+        "hint": "Try to find an exploit and use the Backdoor Entry action afterwards to get access. This takes some time, but in contrast to Brute Force, this won't alarm the target."
       },
       "pop_up": {
         "name": "Popup",
-        "hint": "Spam your opponent with ARO windows, so he can't spend Edge for net hit rounds.",
+        "hint": "Spam your opponent with ARO windows, so they can't spend Edge for net hit rounds as they are distracted."
       },
       "reboot_device": {
         "name": "Reboot Device",
-        "hint": "This will cut off a device from the Matrix by forcing it to reboot. It will be online again by the end of the following combat round.",
+        "hint": "This will cut off a device from the Matrix by forcing it to reboot. It will be online again by the end of the following combat round."
       },
       "reconfigure": {
         "name": "Reconfigure Matrix Attribute",
-        "hint": "Switch two base ratings from your Matrix Persona, regardless of the source (commlink, cyberjack, ...) they are coming from.",
+        "hint": "Switch two base ratings from your Matrix Persona that are higher than 0, regardless of the source (commlink, cyberjack, etc.) they are coming from."
       },
       "send_message": {
         "name": "Send Message",
-        "hint": "Deliver audio or text to somebody else or create a live feed for them.",
+        "hint": "Deliver audio or text to somebody else, or create a live feed to them."
       },
       "set_data_bomb": {
         "name": "Set Data Bomb",
-        "hint": "Attach a Data Bomb to blow up careless hackers. The rating can be up to the maximum net hits you got. Then choose, if the Data Bomb deletes the file or not.",
+        "hint": "Attach a Data Bomb to blow up careless hackers. The rating can be up to the maximum net hits you got. Then choose, if the Data Bomb deletes the file or not."
       },
       "snoop": {
         "name": "Snoop",
-        "hint": "Get your hands on data traffic that is exchanged between your target and the Matrix.",
+        "hint": "Get your hands on data traffic that is exchanged between your target and the Matrix."
       },
       "spoof_command": {
         "name": "Spoof Command",
-        "hint": "Send a command to a device pretending that you are the legitimate owner.",
+        "hint": "Send a command to a device pretending that you are the legitimate owner. As normal, the device then attempts to perform the action as its next available major action. "
       },
       "squelch": {
         "name": "Squelch",
-        "hint": "Hinder the target from sending messages or calling someone for net hit rounds.",
+        "hint": "Hinder the target from sending messages or calling someone for net hit rounds."
       },
       "subvert_infrastructure": {
         "name": "Subvert Infrastructure",
-        "hint": "Make a group of similar, simple wifi devices of one host do what you want, like turning off street lights or rotate all security cameras to the left.",
+        "hint": "Make a group of similar, simple, devices of one host do what you want, like turning off street lights or rotate all security cameras to the left."
       },
       "switch_ifmode": {
         "name": "Switch Interface Mode",
-        "hint": "Toggle between the AR and VR mode of your interface.",
+        "hint": "Toggle between the AR and VR mode(s) of your interface."
       },
       "tarpit": {
         "name": "Tarpit",
-        "hint": "Slow down your target by making some damage and reducing it's data processing value.",
+        "hint": "Slow down your target by making some damage and reducing it's data processing value."
       },
       "threat_analysis": {
         "name": "Threat Analysis",
-        "hint": "Mark harmfull entities and share them by AR Feed to your team mates, so they get your succcesses as bonus dice on their defense roll. Works for the physical world as well as for the Matrix.",
+        "hint": "Mark harmfull entities and share them by AR Feed to your team mates, so they get your succcesses as bonus dice on their defense roll. Works for the physical world as well as for the Matrix."
       },
       "trace_icon": {
         "name": "Trace Icon",
-        "hint": "Track down the physical location of a device or persona.",
+        "hint": "Track down the physical location of a device or persona."
       },
       "virtual_aim": {
         "name": "Virtual Aim",
-        "hint": "Gives you one bonus dice for your attack actions like Data Spike or Tarpit. Can be activated once per round, but sums up each round unless you don't do another Virtual Aim action or attack. Maximum is your Willpower.",
+        "hint": "Gives you one bonus dice for your attack actions like Data Spike or Tarpit. Can be activated once per round, but sums up each round unless you don't do another Virtual Aim action or attack. Maximum is your Willpower."
       },
       "watchdog": {
         "name": "Watchdog",
-        "hint": "Allows you to stalk and anticipate the actions of a Matrix persona or device during net hit rounds, so that you can intervene. Having the Watchdog active allows you to execute the Threat Analysis as a minor action.",
-      },
+        "hint": "Allows you to stalk and anticipate the actions of a Matrix persona or device during net hit rounds, so that you can intervene. Having the Watchdog active allows you to execute the Threat Analysis as a minor action."
+      }
     },
     "matrixini": {
 			"ar": "AR",
